--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+*.pyc
+.vscode
+output
+build
+diff_rasterization/diff_rast.egg-info
+diff_rasterization/dist
+data
+tensorboard_3d
+**/__pycache__/
+events.out*
+data/
+ckpt
+ckpts/
 checkpoints/
+release
+*.sh
+visualize
+data/
+output/
