--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,13 +38,12 @@ dependencies = [
 dev = [
     "torch==2.1.1",
     "torchvision==0.16.1",
-    "numpy<2",
+    "numpy==1.26.3",
     "opencv-python>=4.5.0",
     "matplotlib>=3.3.0",
     "pillow>=8.0.0",
-    "imageio>=2.31.0",
-    "plyfile>=0.7.0",
-    
+    "imageio==2.37.0",
+    "plyfile==0.7.0",
     "tqdm>=4.60.0",
 ]
 all = [
